<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pendulumstudio="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_share"
        android:title="@string/share"
        android:icon="@android:drawable/ic_menu_share"
        pendulumstudio:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        pendulumstudio:showAsAction="never"/>
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_rate"
        android:title="@string/google_play"
        pendulumstudio:showAsAction="never"/>
    <item
        android:id="@+id/action_information"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/information"
        pendulumstudio:showAsAction="never"/>
    <!--    android:showAsAction="never"  -->
    <!--   <item
           android:id="@+id/action_about"
           android:orderInCategory="100"
           android:title="@string/about"/> -->

   </menu>
