<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dip"
    >

<TextView  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_text_1a"
    android:textSize="20dp"
    android:gravity="center_horizontal"
    android:paddingBottom="0dip"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_text_1b"
    android:gravity="center_horizontal"
    android:paddingBottom="6dip"
    />

<TextView  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_text_2"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="12dip"
    />

 <Button
     android:id="@+id/btn_finish_about"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:text="@string/btn_finish_about_label"
     android:textSize="20dp"
     android:layout_gravity="center_horizontal"
     android:onClick="finishDialog"
     />
</LinearLayout>
