<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="0dip" 
		android:layout_weight="1" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:paddingLeft="12dip">
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/label_param"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:id="@+id/SP2D_labelaa"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/SP2D_label_aa" />
	
	            <EditText
	                android:id="@+id/SP2D_edita"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	        </LinearLayout>

	        
	        <LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView
	            android:id="@+id/SP2D_labelm"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/SP2D_label_m" 
	            android:layout_weight="1"/>
	            
	            <EditText
	                android:id="@+id/SP2D_editm"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	
	        </LinearLayout>
	        
	        
	        <LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView
	            android:id="@+id/SP2D_labelg"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/SP2D_label_g" 
	            android:layout_weight="1"/>
	            
	            <EditText
	                android:id="@+id/SP2D_editg"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	
	        </LinearLayout>
			
			<LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView
	            android:id="@+id/SP2D_label_k"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/SP2D_label_k" 
	            android:layout_weight="1"/>
	            
	            <EditText
	                android:id="@+id/SP2D_editk"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/SP2D_label_gam" 
	            android:layout_weight="1"/>
	            
	            <EditText
	                android:id="@+id/SP2D_editgam"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	
	        </LinearLayout>
	        
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/SP2D_init"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <RadioGroup
	            android:id="@+id/SP2D_radioGroupInit"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:orientation="horizontal" >
	
	            <RadioButton
	                android:id="@+id/SP2D_radioRand"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/SP2D_init_rand" />
	
	            <RadioButton
	                android:id="@+id/SP2D_radioFixed"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/SP2D_init_fixed" />
	
	        </RadioGroup>
			
			<LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:id="@+id/SP2D_labelx0"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/SP2D_label_x0" />
	
	            <EditText
	                android:id="@+id/SP2D_editx0"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView
	            android:id="@+id/SP2D_labelxv0"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/SP2D_label_xv0" 
	            android:layout_weight="1"/>
	            
	            <EditText
	                android:id="@+id/SP2D_editxv0"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	
	        </LinearLayout>
			
			
			<LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:id="@+id/SP2D_labely0"
	                android:layout_width="0dip"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:text="@string/SP2D_label_y0" />
	
	            <EditText
	                android:id="@+id/SP2D_edity0"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView
	            android:id="@+id/SP2D_labelyv0"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:text="@string/SP2D_label_yv0" 
	            android:layout_weight="1"/>
	            
	            <EditText
	                android:id="@+id/SP2D_edityv0"
	                android:layout_width="wrap_content" android:layout_weight="0.25"
	                android:layout_height="wrap_content"
	                android:inputType="numberDecimal" >
	            </EditText>
	
	        </LinearLayout>
	        
			<LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="140dp"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	
	        </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/pendulum_color"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/SP2D_PendulumColor"
                    android:onClick="PendulumColor"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="15dp" />
	
	        <CheckBox
	            android:id="@+id/SP2D_checkBoxTraj"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/SP2D_trajectory" />
	        
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	        
		        	<TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/SP2D_label_trlength" 
		            android:layout_weight="1"/>
		            
		            <EditText
		                android:id="@+id/SP2D_edittrajle"
		                android:layout_width="wrap_content" android:layout_weight="0.25"
		                android:layout_height="wrap_content"
		                android:inputType="number" >
		            </EditText>

					<CheckBox
						android:id="@+id/SP2D_checkBoxTrajInfinite"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/trajectory_infinite" />
	            
	         </LinearLayout>

            <CheckBox
                android:id="@+id/pref_fullscreen_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_fullscreen" />

            <CheckBox
                android:id="@+id/pref_fps_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_fps" />

			<CheckBox
				android:id="@+id/pref_buttons_fade_loc"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/pref_buttons_fade" />
	
	    </LinearLayout>
	    
	
	</ScrollView>
	
	
	<LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/SP2D_okButton"
            android:onClick="okButton"

            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/button_ok" />

        <Button
            android:id="@+id/SP2D_cancelButton"
            android:onClick="cancelButton"

            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/MP_resetButton"
            android:onClick="resetButton"

            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/button_reset" />

    </LinearLayout>
	
</LinearLayout>